# ofa

./: LICENSE.txt  README.txt
common/account/: BUILD.gn  OWNERS  account.gyp  account_auth_data.h  account_auth_data_fetcher.h  account_auth_data_fetcher_mock.cc  account_auth_data_fetcher_mock.h  account_observer.h  account_service.cc  account_service.h  account_service_delegate.h  account_service_impl.cc  account_service_impl.h  account_service_impl_test.cc  account_util.cc  account_util.h  account_util_test.cc  mock_account_observer.cc  mock_account_observer.h  mock_account_service.cc  mock_account_service.h  oauth_token_fetcher.cc  oauth_token_fetcher.h  oauth_token_fetcher_impl.cc  oauth_token_fetcher_impl.h  oauth_token_fetcher_test.cc  time_skew_resolver.h  time_skew_resolver_impl.cc  time_skew_resolver_impl.h  time_skew_resolver_impl_test.cc  time_skew_resolver_mock.cc  time_skew_resolver_mock.h
common/auth/: BUILD.gn  auth_service_constants.cc  auth_service_constants.h  auth_service_error.h  auth_token_consumer.cc  auth_token_consumer.h  auth_token_fetcher.cc  auth_token_fetcher.h  auth_token_fetcher_unittest.cc
common/bookmarks/: BUILD.gn  OWNERS  bookmarks.gyp  calculate_hash_task.cc  calculate_hash_task.h  duplicate_sync_helper.cc  duplicate_sync_helper.h  duplicate_task.cc  duplicate_task.h  duplicate_task_runner.cc  duplicate_task_runner.h  duplicate_task_runner_observer.h  duplicate_tracker.cc  duplicate_tracker.h  duplicate_tracker_delegate.h  duplicate_tracker_factory.cc  duplicate_tracker_factory.h  duplicate_util.cc  duplicate_util.h  original_elector.cc  original_elector.h  original_elector_local.cc  original_elector_local.h  original_elector_sync.cc  original_elector_sync.h  remove_duplicate_task.cc  remove_duplicate_task.h  tracker_observer.h
common/constants/: BUILD.gn  constants.gyp  pref_names.cc  pref_names.h  switches.cc  switches.h
common/crypto/: BUILD.gn  OWNERS  gyp_opcrypto.py  op_verify_signature.cc  op_verify_signature.h  op_verify_signature_unittest.cc  opcrypto.gyp
common/error_pages/: BUILD.gn  error_page.cc  error_page.h  error_page_search_data_provider.h  error_pages.gyp  localized_error.cc  localized_error.h
common/favorites/: BUILD.gn  favorite.cc  favorite.h  favorite_collection.h  favorite_collection_impl.cc  favorite_collection_impl.h  favorite_collection_observer.h  favorite_collection_unittest.cc  favorite_data.cc  favorite_data.h  favorite_db_storage.cc  favorite_db_storage.h  favorite_index.cc  favorite_index.h  favorite_storage.cc  favorite_storage.h  favorite_suggestion_provider.cc  favorite_suggestion_provider.h  favorite_unittest.cc  favorite_utils.cc  favorite_utils.h  favorites.gyp
common/fraud_protection/: BUILD.gn  OWNERS  fraud_advisory.cc  fraud_advisory.h  fraud_protection.gyp  fraud_protection_service.cc  fraud_protection_service.h  fraud_rated_server.cc  fraud_rated_server.h  fraud_url_rating.cc  fraud_url_rating.h
common/fraud_protection_ui/: BUILD.gn  fraud_protection.cc  fraud_protection.h  fraud_protection_delegate.cc  fraud_protection_delegate.h  fraud_protection_ui.gyp  fraud_warning_page.cc  fraud_warning_page.h
common/ini_parser/: BUILD.gn  OWNERS  ini_parser.cc  ini_parser.gyp  ini_parser.h  ini_parser_test.cc  ini_parser_tests.gyp
common/message_generator/: BUILD.gn  OWNERS  all_messages.h  message_generator.cc  message_generator.gyp
common/migration/: BUILD.gn  OWNERS  bookmark_importer.cc  bookmark_importer.h  bookmark_importer_test.cc  cookie_importer.cc  cookie_importer.h  cookie_importer_test.cc  download_history_importer.cc  download_history_importer.h  download_history_importer_test.cc  global_history_importer.cc  global_history_importer.h  global_history_importer_test.cc  importer.h  importer_types.h  migration.gyp  migration_assistant.cc  migration_assistant.h  migration_assistant_factory.cc  migration_assistant_factory.h  migration_assistant_test.cc  migration_result_listener.h  migration_result_listener_mock.cc  migration_result_listener_mock.h  password_importer.cc  password_importer.h  password_importer_test.cc  prefs_importer.cc  prefs_importer.h  prefs_importer_test.cc  profile_folder_finder.h  search_history_importer.cc  search_history_importer.h  search_history_importer_test.cc  session_importer.cc  session_importer.h  session_importer_test.cc  speed_dial_importer.cc  speed_dial_importer.h  (+11 more)
common/net/: BUILD.gn  OWNERS  certificate_util.cc  certificate_util.h  certificate_util_linux.cc  certificate_util_win.cc  common_net.gyp  net_resource_provider.cc  net_resource_provider.h  opera_cert_verifier_delegate.cc  opera_cert_verifier_delegate.h  opera_cert_verifier_delegate_unittest.cc  sensitive_url_request_user_data.cc  sensitive_url_request_user_data.h
common/oauth2/: BUILD.gn  OWNERS  auth_service.h  auth_service_factory.cc  auth_service_factory.h  auth_service_impl.cc  auth_service_impl.h  auth_service_impl_test.cc  auth_service_mock.cc  auth_service_mock.h  oauth2.gyp  pref_names.cc  pref_names.h
common/resources/: BUILD.gn  opera_common_resources.grd  resource_ids  resources.gyp  safezone_common_resources.grd
common/sitepatcher/: BUILD.gn  args.gni  config.h  sitepatcher.gyp
common/strings/: BUILD.gn  OWNERS  opera_common_strings.grd  product_free_common_strings.grd  resource_ids  safezone_common_strings.grd  strings.gyp
common/suggestion/: BUILD.gn  OWNERS  query_parser.cc  query_parser.h  snippet.h  suggestion.gyp  suggestion_callback.h  suggestion_item.cc  suggestion_item.h  suggestion_manager.cc  suggestion_manager.h  suggestion_manager_test.cc  suggestion_provider.h  suggestion_tokens.cc  suggestion_tokens.h  url_index.cc  url_index.h
common/sync/: BUILD.gn  OWNERS  pref_names.cc  pref_names.h  profile_sync_service_params_provider.cc  profile_sync_service_params_provider.h  profile_sync_service_params_provider_provider_mock.cc  profile_sync_service_params_provider_provider_mock.h  sync.gyp  sync_account.cc  sync_account.h  sync_account_impl.cc  sync_account_impl.h  sync_account_mock.cc  sync_account_mock.h  sync_account_test.cc  sync_auth_data_updater.cc  (+46 more)
(+2030 files in other folders)
