# Copyright (C) 2015 Opera Software ASA.  All rights reserved.
#
# This file is an original work developed by Opera Software ASA.

import("//tools/grit/grd_consistency_checker.gni")
import("//tools/grit/grit_rule.gni")

grit_output_dir = "$root_gen_dir/opera_common"

check_grd_consistency("common_strings_consistency_check") {
  sources = [
    "opera_common_strings.grd",
    "safezone_common_strings.grd",
  ]
  output_dir = grit_output_dir
}

grit("product_free_common_strings") {
  source = "product_free_common_strings.grd"
  resource_ids = "resource_ids"
  output_dir = grit_output_dir
  outputs = [
    "grit/product_free_common_strings.h",
    "grit/product_free_common_strings_resources_map.cc",
    "grit/product_free_common_strings_resources_map.h",
    "product_free_common_strings_af.pak",
    "product_free_common_strings_am.pak",
    "product_free_common_strings_ar.pak",
    "product_free_common_strings_as.pak",
    "product_free_common_strings_az.pak",
    "product_free_common_strings_be.pak",
    "product_free_common_strings_bg.pak",
    "product_free_common_strings_bn-BD.pak",
    "product_free_common_strings_bn.pak",
    "product_free_common_strings_ca.pak",
    "product_free_common_strings_cs.pak",
    "product_free_common_strings_da.pak",
    "product_free_common_strings_de.pak",
    "product_free_common_strings_el.pak",
    "product_free_common_strings_en-GB.pak",
    "product_free_common_strings_en-US.pak",
    "product_free_common_strings_es-419.pak",
    "product_free_common_strings_es.pak",
    "product_free_common_strings_et.pak",
    "product_free_common_strings_fa.pak",
    "product_free_common_strings_fake-bidi.pak",
    "product_free_common_strings_fi.pak",
    "product_free_common_strings_fil.pak",
    "product_free_common_strings_fr-CA.pak",
    "product_free_common_strings_fr.pak",
    "product_free_common_strings_fy.pak",
    "product_free_common_strings_gd.pak",
    "product_free_common_strings_gu.pak",
    "product_free_common_strings_he.pak",
    "product_free_common_strings_hi.pak",
    "product_free_common_strings_hr.pak",
    "product_free_common_strings_hu.pak",
    "product_free_common_strings_id.pak",
    "product_free_common_strings_it.pak",
    "product_free_common_strings_ja.pak",
    "product_free_common_strings_kk.pak",
    "product_free_common_strings_kn.pak",
    "product_free_common_strings_ko.pak",
    "product_free_common_strings_lt.pak",
    "product_free_common_strings_lv.pak",
    "product_free_common_strings_me.pak",
    "product_free_common_strings_mk.pak",
    "product_free_common_strings_ml.pak",
    "product_free_common_strings_mr.pak",
    "product_free_common_strings_ms.pak",
    "product_free_common_strings_my.pak",
    "product_free_common_strings_nb.pak",
    "product_free_common_strings_nl.pak",
    "product_free_common_strings_nn.pak",
    "product_free_common_strings_or.pak",
    "product_free_common_strings_pa.pak",
    "product_free_common_strings_pl.pak",
    "product_free_common_strings_pt-BR.pak",
    "product_free_common_strings_pt-PT.pak",
    "product_free_common_strings_ro.pak",
    "product_free_common_strings_ru.pak",
    "product_free_common_strings_si.pak",
    "product_free_common_strings_sk.pak",
    "product_free_common_strings_sl.pak",
    "product_free_common_strings_sr.pak",
    "product_free_common_strings_sv.pak",
    "product_free_common_strings_sw.pak",
    "product_free_common_strings_ta.pak",
    "product_free_common_strings_te.pak",
    "product_free_common_strings_th.pak",
    "product_free_common_strings_tr.pak",
    "product_free_common_strings_uk.pak",
    "product_free_common_strings_ur.pak",
    "product_free_common_strings_uz.pak",
    "product_free_common_strings_vi.pak",
    "product_free_common_strings_zh-CN.pak",
    "product_free_common_strings_zh-TW.pak",
    "product_free_common_strings_zu.pak",
  ]

  if (!use_zawgyi_encoding) {
    outputs += [ "product_free_common_strings_my-ZG.pak" ]
  }
}

grit("strings") {
  deps = [
    ":common_strings_consistency_check",
    ":product_free_common_strings",
  ]
  source = "opera_common_strings.grd"
  resource_ids = "resource_ids"
  output_dir = grit_output_dir
  outputs = [
    "grit/product_related_common_strings.h",
    "grit/product_related_common_strings_resources_map.cc",
    "grit/product_related_common_strings_resources_map.h",
    "opera_common_strings_af.pak",
    "opera_common_strings_am.pak",
    "opera_common_strings_ar.pak",
    "opera_common_strings_as.pak",
    "opera_common_strings_az.pak",
    "opera_common_strings_be.pak",
    "opera_common_strings_bg.pak",
    "opera_common_strings_bn-BD.pak",
    "opera_common_strings_bn.pak",
    "opera_common_strings_ca.pak",
    "opera_common_strings_cs.pak",
    "opera_common_strings_da.pak",
    "opera_common_strings_de.pak",
    "opera_common_strings_el.pak",
    "opera_common_strings_en-GB.pak",
    "opera_common_strings_en-US.pak",
    "opera_common_strings_es-419.pak",
    "opera_common_strings_es.pak",
    "opera_common_strings_et.pak",
    "opera_common_strings_fa.pak",
    "opera_common_strings_fake-bidi.pak",
    "opera_common_strings_fi.pak",
    "opera_common_strings_fil.pak",
    "opera_common_strings_fr-CA.pak",
    "opera_common_strings_fr.pak",
    "opera_common_strings_fy.pak",
    "opera_common_strings_gd.pak",
    "opera_common_strings_gu.pak",
    "opera_common_strings_he.pak",
    "opera_common_strings_hi.pak",
    "opera_common_strings_hr.pak",
    "opera_common_strings_hu.pak",
    "opera_common_strings_id.pak",
    "opera_common_strings_it.pak",
    "opera_common_strings_ja.pak",
    "opera_common_strings_kk.pak",
    "opera_common_strings_kn.pak",
    "opera_common_strings_ko.pak",
    "opera_common_strings_lt.pak",
    "opera_common_strings_lv.pak",
    "opera_common_strings_me.pak",
    "opera_common_strings_mk.pak",
    "opera_common_strings_ml.pak",
    "opera_common_strings_mr.pak",
    "opera_common_strings_ms.pak",
    "opera_common_strings_my.pak",
    "opera_common_strings_nb.pak",
    "opera_common_strings_nl.pak",
    "opera_common_strings_nn.pak",
    "opera_common_strings_or.pak",
    "opera_common_strings_pa.pak",
    "opera_common_strings_pl.pak",
    "opera_common_strings_pt-BR.pak",
    "opera_common_strings_pt-PT.pak",
    "opera_common_strings_ro.pak",
    "opera_common_strings_ru.pak",
    "opera_common_strings_si.pak",
    "opera_common_strings_sk.pak",
    "opera_common_strings_sl.pak",
    "opera_common_strings_sr.pak",
    "opera_common_strings_sv.pak",
    "opera_common_strings_sw.pak",
    "opera_common_strings_ta.pak",
    "opera_common_strings_te.pak",
    "opera_common_strings_th.pak",
    "opera_common_strings_tr.pak",
    "opera_common_strings_uk.pak",
    "opera_common_strings_ur.pak",
    "opera_common_strings_uz.pak",
    "opera_common_strings_vi.pak",
    "opera_common_strings_zh-CN.pak",
    "opera_common_strings_zh-TW.pak",
    "opera_common_strings_zu.pak",
  ]

  if (!use_zawgyi_encoding) {
    outputs += [ "opera_common_strings_my-ZG.pak" ]
  }
}

grit("safezone_strings") {
  deps = [
    ":common_strings_consistency_check",
    ":product_free_common_strings",
  ]
  source = "safezone_common_strings.grd"
  resource_ids = "resource_ids"
  output_dir = grit_output_dir
  outputs = [
    "safezone_common_strings_af.pak",
    "safezone_common_strings_ar.pak",
    "safezone_common_strings_az.pak",
    "safezone_common_strings_be.pak",
    "safezone_common_strings_bg.pak",
    "safezone_common_strings_bn.pak",
    "safezone_common_strings_ca.pak",
    "safezone_common_strings_cs.pak",
    "safezone_common_strings_da.pak",
    "safezone_common_strings_de.pak",
    "safezone_common_strings_el.pak",
    "safezone_common_strings_en-GB.pak",
    "safezone_common_strings_en-US.pak",
    "safezone_common_strings_es-419.pak",
    "safezone_common_strings_es.pak",
    "safezone_common_strings_fa.pak",
    "safezone_common_strings_fi.pak",
    "safezone_common_strings_fil.pak",
    "safezone_common_strings_fr-CA.pak",
    "safezone_common_strings_fr.pak",
    "safezone_common_strings_fy.pak",
    "safezone_common_strings_gd.pak",
    "safezone_common_strings_he.pak",
    "safezone_common_strings_hi.pak",
    "safezone_common_strings_hr.pak",
    "safezone_common_strings_hu.pak",
    "safezone_common_strings_id.pak",
    "safezone_common_strings_it.pak",
    "safezone_common_strings_ja.pak",
    "safezone_common_strings_kk.pak",
    "safezone_common_strings_ko.pak",
    "safezone_common_strings_lt.pak",
    "safezone_common_strings_lv.pak",
    "safezone_common_strings_me.pak",
    "safezone_common_strings_mk.pak",
    "safezone_common_strings_ms.pak",
    "safezone_common_strings_nb.pak",
    "safezone_common_strings_nl.pak",
    "safezone_common_strings_nn.pak",
    "safezone_common_strings_pa.pak",
    "safezone_common_strings_pl.pak",
    "safezone_common_strings_pt-BR.pak",
    "safezone_common_strings_pt-PT.pak",
    "safezone_common_strings_ro.pak",
    "safezone_common_strings_ru.pak",
    "safezone_common_strings_sk.pak",
    "safezone_common_strings_sr.pak",
    "safezone_common_strings_sv.pak",
    "safezone_common_strings_sw.pak",
    "safezone_common_strings_ta.pak",
    "safezone_common_strings_te.pak",
    "safezone_common_strings_th.pak",
    "safezone_common_strings_tr.pak",
    "safezone_common_strings_uk.pak",
    "safezone_common_strings_uz.pak",
    "safezone_common_strings_vi.pak",
    "safezone_common_strings_zh-CN.pak",
    "safezone_common_strings_zh-TW.pak",
    "safezone_common_strings_zu.pak",
  ]
}
